--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.4",
     "jest": "^29.7.0",
-    "prisma": "^5.7.0"
+    "prisma": "^5.7.0",
+    "ts-jest": "^29.1.1"
   },
   "dependencies": {
     "express": "^4.18.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
