--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,8 @@
     "strict": true,                                      /* Enable all strict type-checking options. */
 
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+  },
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
   }
 }
