--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "serve": "ts-node ./src/infra/server.ts",
-    "test": "jest"
+    "test": "jest",
+    "migration:generate": "prisma migration generate --schema=./src/infra/prisma/schema.prisma",
+    "migration:deploy": "prisma migration deploy --schema=./src/infra/prisma/schema.prisma"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
