--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "serve": "ts-node ./src/infra/server.ts",
     "start": "npm instal && npm run migration:generate && npm run migration:deploy && npm run serve",
     "test": "jest",
-    "migration:generate": "prisma migration generate --schema=./src/infra/prisma/schema.prisma",
-    "migration:deploy": "prisma migration deploy --schema=./src/infra/prisma/schema.prisma"
+    "migration:generate": "prisma generate --schema=./src/infra/prisma/schema.prisma",
+    "migration:deploy": "prisma migrate deploy --schema=./src/infra/prisma/schema.prisma"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
