--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
 
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
+  "exclude": ["jest.config.ts"],
   "ts-node": {
     "require": ["tsconfig-paths/register"]
   }
